add moderator api
